--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -8,7 +8,7 @@
     Title="King Colin"
     Width="1434"
     Height="818"
-    FocusManager.FocusedElement="{Binding ElementName=cv_Jeux}"
+    FocusManager.FocusedElement="{Binding ElementName=cv_Global}"
     Loaded="MainWindow_Loaded"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
@@ -16,7 +16,7 @@
         <SolidColorBrush Opacity="0" />
     </Window.Background>
     <Window.Resources>
-        <FontFamily x:Key="Pixel">/Police/#PixelDart</FontFamily>
+        <FontFamily x:Key="PixelDartFont">/Police/PixelDart.ttf#PixelDart</FontFamily>
     </Window.Resources>
     <Grid>
         <Canvas x:Name="cv_Global" Margin="-1,0,1,0">
@@ -319,15 +319,11 @@
         <Canvas x:Name="cv_Combat" Visibility="Visible">
             <Rectangle
                 x:Name="FondEcran2"
+                Canvas.Top="-2"
                 Width="1434"
-                Height="806" />
-            <Image
-                Width="1434"
-                Height="802"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Top"
-                Source="/Img/Element/map3.png"
-                Stretch="Fill" />
+                Height="806"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top" />
             <Rectangle
                 x:Name="PlateformeCombat"
                 Canvas.Left="158"
@@ -362,11 +358,10 @@
                 Height="90"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
-                FontFamily="{StaticResource Pixel}"
+                FontFamily="{StaticResource PixelDartFont}"
                 FontSize="100"
-                Foreground="White">
-                JOUEUR
-            </TextBlock>
+                Foreground="White"
+                Text="JOUEUR" />
             <TextBlock
                 x:Name="txt_Diard"
                 Canvas.Left="10"
@@ -374,11 +369,10 @@
                 Height="90"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
-                FontFamily="{StaticResource Pixel}"
+                FontFamily="{StaticResource PixelDartFont}"
                 FontSize="100"
-                Foreground="White">
-                DIARD
-            </TextBlock>
+                Foreground="White"
+                Text="DIARD" />
             <Rectangle
                 x:Name="BarreBoss"
                 Canvas.Left="10"
