--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -28,7 +28,7 @@
                 Height="200"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
-                Visibility="Visible">
+                Visibility="Hidden">
                 <Rectangle
                     x:Name="SalleSecrete"
                     Width="200"
@@ -80,10 +80,10 @@
                 <Rectangle
                     x:Name="Marteau"
                     Canvas.Left="323"
-                    Canvas.Top="322"
+                    Canvas.Top="384"
                     Width="30"
                     Height="26"
-                    HorizontalAlignment="Left"
+                    HorizontalAlignment="Center"
                     VerticalAlignment="Top" />
                 <Rectangle
                     Name="Plateforme1"
